[package]
name = "basileus"
version = "0.3.1"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "All-in-one library for user management, authorization, sessions and permission management"
documentation = "https://github.com/misaka10987/basileus"
homepage = "https://github.com/misaka10987/basileus"
repository = "https://github.com/misaka10987/basileus"
readme = "README.md"
keywords = ["basileus", "user", "permission", "authorization", "database"]
license = "MIT"

[dependencies]
sqlx = { version = "0.8.6", features = ["sqlite"], default-features = false }
thiserror = "2.0.18"
getrandom = "0.4.1"
base64 = "0.22.1"
rust-argon2 = "3.0.0"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"], optional = true }
sha2 = "0.10.9"
